# sales-agent

./: .env.example  .env.local.template  .env.setup  .gitignore  .pre-commit-config.yaml  ANALYSIS_AND_ROADMAP.md  API_ENDPOINTS.md  BUILD_PHILOSOPHY.md  CAMPAIGN_GENERATOR_DOCS.md  CAMPAIGN_QUICK_START.md  CASEYOS_PRODUCTION_AUDIT_REPORT.md  CASEYOS_TRANSFORMATION.md  CHANGELOG.md  CODEBASE_AUDIT_REPORT.json  COMPREHENSIVE_SPRINT_ROADMAP.md  COVERAGE_REPORT.md  CURRENT_STATUS.md  DELIVERY_COMPLETE.md  DEPLOYMENT_FIX.md  DEPLOYMENT_PHILOSOPHY.md  Dockerfile  EXECUTION_SUMMARY.md  HUBSPOT_SYNC_DOCS.md  HUBSPOT_SYNC_IMPLEMENTATION.md  IMPLEMENTATION_INDEX.md  IMPLEMENTATION_SUMMARY.md  LIVE_DEPLOYMENT_INFO.md  Makefile  PHASE3_COMPLETE.md  PHASE3_IMPLEMENTATION.md  PHASE3_QUICK_REFERENCE.md  PHASE3_STATUS.md  PHASE4_SPRINT_PLAN.md  PHASE_2_COMPLETE.md  PHASE_2_SUMMARY.md  PRODUCTION_BUGFIXES.md  PROJECT_BUILD_PHILOSOPHY.md  Procfile  QUICK_REFERENCE.md  README.md  (+50 more)
.github/: copilot-instructions.md  copilot-instructions.md.bak
docs/: ADMIN_PASSWORD_ROTATION.md  API_COMMAND_QUEUE.md  CASEYOS_ARCHITECTURE.md  CASEYOS_ARCHITECTURE_AUDIT.md  CASEYOS_HENRY_EVOLUTION.md  CASEYOS_PHILOSOPHY.md  CASEYOS_READY_TO_EXECUTE.md  CASEYOS_SPRINT_ROADMAP.md  CASEYOS_TELEMETRY.md  DRAFT_ONLY_SETUP.md  DR_RUNBOOK.md  EMERGENCY_FIX_REPORT.md  GOOGLE_OAUTH.md  HUBSPOT_WEBHOOK.md  INTEGRATION_SETUP.md  MANUAL_VALIDATION_CHECKLIST.md  MCP_INTEGRATION.md  PRODUCTION_DEPLOYMENT.md  SECRETS_CHECK.md  SECURITY_AUDIT.md  SENTRY_SETUP.md  SIGNALS.md  SPRINT_11_12_COMPLETE.md  TWITTER_GROK_SETUP.md  sprint_plan.md
infra/: alembic.ini  backup.sh  init_db.sql  restore.sh
scripts/: add_test_contacts.py  direct_import_chainge.py  draft_all_emails.py  draft_emails_for_queue.py  fetch_chainge_contacts.py  import_chainge_submissions.py  import_with_logging.py  load_drafts_to_jarvis.py  quick_test.py  rollback.sh  seed_command_queue.py  simple_draft_emails.py  sync_to_production.py  test_hubspot_access.py  test_hubspot_auth.py  validate_sprint_23.py  validate_sprint_23_completion.py  verify_prod_ui.py  verify_ui.py
src/: __init__.py  __main__.py  analysis.py  analytics_engine.py  audit.py  audit_trail.py  auto_approval.py  celery_app.py  circuit_breaker.py  config.py  constants.py  db.py  deps.py  draft_generator.py  feature_flags.py  formlead_orchestrator.py  gdpr.py  hubspot_sync.py  logger.py  main.py  middleware.py  oauth_manager.py  oauth_manager_legacy.py  operator_mode.py  orchestrator.py  pii_detector.py  rate_limiter.py  rate_limiter_enhanced.py  resilience.py  retry.py  sentry_integration.py  shutdown.py  tasks.py  telemetry.py  voice_approval.py  voice_profile.py  voice_trainer.py  webhook.py  (+2 more)
(+735 files in other folders)
